Make route & request first-class citizen
