# app/Models/Posts.php
@@ -1,6 +1,9 @@
 <?php
 namespace App\Models;
 
+use Illuminate\Http\Request;
+use Illuminate\Routing\Route;
+
 class Posts extends Models
 {
     public function __construct(Post $post)
@@ -8,37 +11,45 @@ class Posts extends Models
         parent::__construct($post);
     }
 
-    public function getByUser(User $user, array $data)
+    public function getByRoute(Route $route)
     {
+        $user = $route->parameter("user_id");
+
         return $this->query()
             ->where("user_id", $user->id)
             ->get();
     }
 
-    public function createByUser(User $user, array $data)
+    public function createByRoute(Route $route, Request $request)
     {
+        $user = $route->parameter("user_id");
+
         return $this->model->create(
-            array_merge($data, [
+            array_merge($request->all(), [
                 "user_id" => $user->id,
             ])
         );
     }
 
-    public function findByUser(Post $post, User $user, array $data)
+    public function findByRoute(Route $route)
     {
-        return $post;
+        return $route->parameter("post_id");
     }
 
-    public function updateByUser(Post $post, User $user, array $data)
+    public function updateByRoute(Route $route, Request $request)
     {
-        $post->fill($data);
+        $post = $route->parameter("post_id");
+
+        $post->fill($request->all());
         $post->save();
 
         return $post;
     }
 
-    public function deleteByUser(Post $post, User $user, array $data)
+    public function deleteByRoute(Route $route)
     {
+        $post = $route->parameter("post_id");
+
         $post->delete();
 
         return $post;
