# app/Models/Users.php
@@ -1,6 +1,9 @@
 <?php
 namespace App\Models;
 
+use Illuminate\Http\Request;
+use Illuminate\Routing\Route;
+
 class Users extends Models
 {
     public function __construct(User $user)
@@ -8,24 +11,26 @@ class Users extends Models
         parent::__construct($user);
     }
 
-    public function list(array $data)
+    public function listByRoute()
     {
         return $this->getAll("name", "asc");
     }
 
-    public function create(array $data)
+    public function createByRoute(Route $route, Request $request)
     {
-        return $this->model->create($data);
+        return $this->model->create($request->all());
     }
 
-    public function read(User $user, array $data)
+    public function readByRoute(Route $route)
     {
-        return $user;
+        return $route->parameter("user_id");
     }
 
-    public function update(User $user, array $data)
+    public function updateByRoute(Route $route, Request $request)
     {
-        $user->fill($data);
+        $user = $route->parameter("user_id");
+
+        $user->fill($request->all());
         $user->save();
 
         return $user;
